@@ -26,23 +26,6 @@ angular.module('wing',[])
 .factory('objectListManager', ['$http',function ($http) {
     var confirmations_enabled = true;
     var fetch_options = {};
-    var merge = function (obj1,obj2){ // Our merge function, until angular.merge() appears in 1.4
-        var result = {}; // return result
-        for(var i in obj1){      // for every property in obj1 
-            if ((i in obj2) && (typeof obj1[i] === "object") && (i !== null)){
-                result[i] = merge(obj1[i],obj2[i]); // if it's an object, merge   
-            }else{
-               result[i] = obj1[i]; // add it to result
-            }
-        }
-        for(i in obj2){ // add the remaining properties from object 2
-            if(i in result){ //conflict
-                continue;
-            }
-            result[i] = obj2[i];
-        }
-        return result;
-    };
         
     return {
         confirmations_enabled : function() { return confirmations_enabled },
@@ -57,7 +40,7 @@ angular.module('wing',[])
                 confirmations_enabled = true;
             }
         },
-        
+
         object_map : function(behavior) {
             this.objects = [];
             this.paging = [];
@@ -68,9 +51,9 @@ angular.module('wing',[])
                     _page_number : self.paging.page_number || 1,
                     _items_per_page : self.paging.items_per_page || 10,
                 };
-                var params = merge(behavior.fetch_options, pagination);
+                var params = wing.merge(behavior.fetch_options, pagination);
                 if (typeof options !== 'undefined' && typeof options.query !== 'undefined') {
-                    params = merge(params, options.query);
+                    params = wing.merge(params, options.query);
                 }
                 $http.get(behavior.list_api, { params : params })
                 .success(function (data) {
@@ -81,7 +64,7 @@ angular.module('wing',[])
             
             this.all = function(page_number) {
                 var self = this;
-                var params = merge({
+                var params = wing.merge({
                     _page_number: page_number || 1,
                     _items_per_page: 10,
                 }, behavior.fetch_options);
@@ -96,7 +79,7 @@ angular.module('wing',[])
             
             this.create = function(properties, options) {
                 var self = this;
-                var params = merge(behavior.fetch_options, properties );
+                var params = wing.merge(behavior.fetch_options, properties );
                 $http.post(behavior.create_api, params)
                 .success(function (data) {
                     self.objects.push(data.result);
@@ -111,7 +94,7 @@ angular.module('wing',[])
             
             this.update =  function(index, options) {
                 var self = this;
-                var params = merge(behavior.fetch_options, self.objects[index]);
+                var params = wing.merge(behavior.fetch_options, self.objects[index]);
                 $http.put(self.objects[index]._relationships.self, params)
                 .success(function (data) {
                     self.objects[index] = data.result;
@@ -133,19 +116,20 @@ angular.module('wing',[])
             
             this.delete = function(index, options) {
                 var self = this;
+                var object = self.objects[index];
                 var message = 'Are you sure?';
-                if ('name' in self.objects[index]) {
-                    message = 'Are you sure you want to delete ' + self.objects[index].name + '?';
+                if ('name' in object) {
+                    message = 'Are you sure you want to delete ' + object.name + '?';
                 }
                 if (confirmations_enabled == false || confirm(message)) {
-                    $http.delete(self.objects[index]._relationships.self, {})
+                    $http.delete(object._relationships.self, {})
                     .success(function (data) {
                         self.objects.splice(index, 1);
                         if (typeof options !== 'undefined' && typeof options.on_success !== 'undefined') {
-                            on_success(data.result, index);
+                            on_success(object, index);
                         }
                         if (typeof behavior.on_delete !== 'undefined') {
-                            behavior.on_delete(data.result, index);
+                            behavior.on_delete(object, index);
                         }
                     });
                 }
